[package]
name = "xsecurelock-saver"
version = "0.1.0"
authors = ["Zachary Stewart <zstewart@google.com>"]

[features]
engine = ["nalgebra", "rayon", "specs", "shred"]
serde-serialize = ["engine", "nalgebra/serde-serialize"]

[dependencies]
libc = "0.2"
log = "0.4"
nalgebra = { version = "0.15", optional = true }
rayon = { version = "1.0", optional = true }
sfml = { git = "https://github.com/jeremyletang/rust-sfml.git", branch = "master" }
shred = { version = "0.7", optional = true }
specs = { version = "0.11", optional = true }
