[package]
name = "physics"
version = "0.1.0"
authors = ["Zachary Stewart <zstewart@google.com>"]
edition = "2018"

[features]
default = []
graphical = ["sfml"]

[dependencies]
nalgebra = "0.15"
shred = "0.7"
specs = "0.11"

[dependencies.sfml]
git = "https://github.com/jeremyletang/rust-sfml.git"
branch = "master"
optional = true
