[package]
name = "saver_genetic_orbits"
version = "0.1.0"
authors = ["Zachary Stewart <zstewart@google.com>"]
edition = "2018"

[features]
default = ["graphical"]
debug-timing = []
graphical = ["xsecurelock-saver", "physics/graphical"]

[dependencies]
circle-collision = { path = "../circle-collision" }
clap = "2.32"
dirs = "1.0"
gravity = { path = "../gravity" }
lalrpop-util = "0.16"
log = "0.4"
nalgebra = "0.15"
num-complex = "0.2"
num-traits = "0.2"
physics = { path = "../physics", features = ["serde-serialize"] }
rand = "0.5"
regex = "1.0"
rusqlite = "0.15"
scene_management = { path = "../scene_management" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
sfml = { git = "https://github.com/jeremyletang/rust-sfml.git", branch = "master" }
simple_logger = "1.0"
specs = "0.11"

[dependencies.xsecurelock-saver]
path = "../"
features = ["engine", "serde-serialize"]
optional = true

[build-dependencies]
lalrpop = "0.16"
