[package]
name = "saver_genetic_orbits"
version = "0.1.0"
authors = ["Zachary Stewart <zstewart@google.com>"]
edition = "2018"

[dependencies]
clap = "2"
dirs = "4"
lalrpop-util = "0.19"
log = "0.4"
rand = "0.8"
rayon = "1.0"
regex = "1.0"
rusqlite = "0.15"
scene_management = { path = "../scene_management" }
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
sfml = "0.16"
simple_logger = "1"
sigint = { path = "../sigint" }

[dependencies.xsecurelock-saver]
path = "../xsecurelock-saver"
features = ["engine", "serde-serialize"]

[build-dependencies]
lalrpop = "0.19"
