[package]
name = "saver_genetic_orbits"
version = "0.1.0"
authors = ["Zachary Stewart <zstewart@google.com>"]
edition = "2018"

[dependencies]
clap = "2"
bevy = { version = "0.5.0", features = ["serialize"] }
bevy_rapier3d = "0.11.0"
dirs = "4"
figment = { version = "0.10" , features = ["yaml"] }
lalrpop-util = "0.19"
log = "0.4"
rand = "0.8"
rand_distr = "0.4"
regex = "1.0"
rusqlite = "0.15"
serde = "1"
serde_json = "1"
xsecurelock-saver = { path = "../xsecurelock-saver", features = ["engine"] }

[build-dependencies]
lalrpop = "0.19"
